--- a/test/fixtures/jwt_denylists.yml
+++ b/test/fixtures/jwt_denylists.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  jti: MyString
+  exp: 2020-07-06 16:48:23
+
+two:
+  jti: MyString
+  exp: 2020-07-06 16:48:23
