--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV['DB_TEST_NAME'] %>
+  pool: 5
+  username: <%= ENV['DB_TEST_USER'] %>
+  password: <%= ENV['DB_TEST_PASS'] %>
 
 production:
   <<: *default
